// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HealthWidget should render for empty data: NoData 1`] = `
<DocumentFragment>
  .c6 {
  width: 20px;
  height: 20px;
  margin-right: -8px;
}

.c3 {
  width: 16px;
  height: 16px;
}

.c3 path {
  stroke: var(--acx-neutrals-50);
}

.c3 circle {
  fill: var(--acx-neutrals-50);
}

.c5 {
  border: none;
  padding: 0;
}

.c5.c5.c5.c5.ant-btn-icon-only {
  width: 16px;
  height: 16px;
  min-width: unset;
}

.c1 {
  height: 100%;
  width: 100%;
}

.c1 .ant-card {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 8px;
  padding: 12px 16px;
  border: 1px solid var(--acx-neutrals-20);
  box-shadow: 0px 2px 4px rgba(51,51,51,0.08);
}

.c1 .ant-card-head {
  padding: 0;
  border-bottom: none;
  min-height: 0;
  margin-bottom: 10px;
}

.c1 .ant-card-head-title {
  padding: 0;
}

.c1 .ant-card-head-title .ant-space .ant-space-item:last-child {
  line-height: 0;
}

.c1 .ant-card-head-wrapper {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c1 .ant-card-extra {
  padding: 0;
}

.c1 .ant-card-body {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0;
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
}

.c2 {
  font-family: var(--acx-accent-brand-font);
  font-size: var(--acx-headline-4-font-size);
  line-height: var(--acx-headline-4-line-height);
  color: var(--acx-primary-black);
  font-weight: var(--acx-headline-4-font-weight-bold);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c4 {
  margin-top: 4px;
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  color: var(--acx-primary-black);
  font-weight: var(--acx-body-font-weight);
  white-space: normal;
}

.c0 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c7 {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 100%;
  padding: 0 16px;
}

.c8 {
  text-align: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c8 .ant-empty-normal {
  margin: 0;
  margin-block-end: 17px;
}

.c9 {
  font-family: var(--acx-neutral-brand-font);
  font-weight: var(--acx-body-4-font-weight);
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  color: var(--acx-primary-black);
}

@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
    class="c0"
  >
    <div
      class="c1"
      type="default"
    >
      <div
        class="ant-card"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 4px;"
                >
                  <div
                    class="c2"
                  >
                    Client Experience
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <svg
                    class="c3"
                    data-testid="HistoricalOutlined"
                  />
                </div>
              </div>
              <div
                class="c4"
              >
                Top Venues with poor experience
              </div>
            </div>
            <div
              class="ant-card-extra"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only c5"
                    title="Expand"
                    type="button"
                  >
                    <svg
                      class="c6"
                      data-testid="ArrowChevronRight"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <div
            style="overflow: visible; height: 0px; width: 0px;"
          >
            <div
              style="display: block; height: 800px; width: 1280px;"
            >
              <div
                class="c7"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center c8 c9"
                >
                  <div
                    class="ant-space-item"
                  >
                    No data to display
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1281px; height: 801px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HealthWidget should render widget with proper data 1`] = `
<DocumentFragment>
   
  .c6 {
  width: 20px;
  height: 20px;
  margin-right: -8px;
}

.c3 {
  width: 16px;
  height: 16px;
}

.c3 path {
  stroke: var(--acx-neutrals-50);
}

.c3 circle {
  fill: var(--acx-neutrals-50);
}

.c5 {
  border: none;
  padding: 0;
}

.c5.c5.c5.c5.ant-btn-icon-only {
  width: 16px;
  height: 16px;
  min-width: unset;
}

.c1 {
  height: 100%;
  width: 100%;
}

.c1 .ant-card {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 8px;
  padding: 12px 16px;
  border: 1px solid var(--acx-neutrals-20);
  box-shadow: 0px 2px 4px rgba(51,51,51,0.08);
}

.c1 .ant-card-head {
  padding: 0;
  border-bottom: none;
  min-height: 0;
  margin-bottom: 10px;
}

.c1 .ant-card-head-title {
  padding: 0;
}

.c1 .ant-card-head-title .ant-space .ant-space-item:last-child {
  line-height: 0;
}

.c1 .ant-card-head-wrapper {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c1 .ant-card-extra {
  padding: 0;
}

.c1 .ant-card-body {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0;
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
}

.c2 {
  font-family: var(--acx-accent-brand-font);
  font-size: var(--acx-headline-4-font-size);
  line-height: var(--acx-headline-4-line-height);
  color: var(--acx-primary-black);
  font-weight: var(--acx-headline-4-font-weight-bold);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c4 {
  margin-top: 4px;
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  color: var(--acx-primary-black);
  font-weight: var(--acx-body-font-weight);
  white-space: normal;
}

.c0 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c8 .ant-pro-table {
  --acx-table-cell-horizontal-space: 8px;
}

.c8 .ant-pro-table .ant-pro-card .ant-pro-card-body {
  padding: 0px;
}

.c8 .ant-pro-table .ant-table .parent-row-data,
.c8 .ant-pro-table .ant-table .parent-row-data .ant-table-cell-row-hover,
.c8 .ant-pro-table .ant-table .parent-row-data .ant-table-cell-fix-right,
.c8 .ant-pro-table .ant-table .parent-row-data .ant-table-cell-fix-left,
.c8 .ant-pro-table .ant-table .parent-row-data .ant-table-column-sort {
  background-color: var(--acx-neutrals-20) !important;
  overflow: visible !important;
}

.c8 .ant-pro-table .ant-table .parent-row-data .ant-table-cell-with-append .ant-table-row-expand-icon {
  display: none;
}

.c8 .ant-pro-table .ant-table .ant-table-cell-with-append .indent-level-2 {
  padding-left: 10px !important;
}

.c8 .ant-pro-table .ant-table-cell-fix-left {
  border-bottom: 1px solid var(--acx-neutrals-30) !important;
}

.c8 .ant-pro-table .ant-table-thead > tr:first-child > th {
  padding-top: 12px;
  font-size: var(--acx-subtitle-4-font-size);
  line-height: var(--acx-subtitle-4-line-height);
  font-weight: var(--acx-subtitle-4-font-weight);
}

.c8 .ant-pro-table .ant-table-thead > tr:not(:first-child) > th {
  padding-top: 6px;
  font-size: var(--acx-subtitle-5-font-size);
  line-height: var(--acx-subtitle-5-line-height);
  font-weight: var(--acx-subtitle-5-font-weight-semi-bold);
}

.c8 .ant-pro-table .ant-table-thead > tr:last-child > th,
.c8 .ant-pro-table .ant-table-thead > tr:first-child > th[rowspan] {
  padding-bottom: 4px;
  border-bottom: 1px solid var(--acx-neutrals-30);
}

.c8 .ant-pro-table .ant-table-thead > tr > th {
  border-bottom: 0;
  padding: 0px var(--acx-table-cell-horizontal-space);
}

.c8 .ant-pro-table .ant-table-thead > tr > th:not(:last-child):not(.ant-table-selection-column):not(.ant-table-row-expand-icon-cell):not([colspan])::before {
  width: 0px;
}

.c8 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-title {
  -webkit-flex: unset;
  -ms-flex: unset;
  flex: unset;
}

.c8 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-sorter {
  --icon-size: 11px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: 0;
}

.c8 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-sorter-up,
.c8 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-sorter-down {
  visibility: hidden;
  width: 0;
}

.c8 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-sorter-up.active,
.c8 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-sorter-down.active {
  visibility: visible;
  width: unset;
  margin-left: calc(var(--icon-size) / 2);
}

.c8 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-sorter-up {
  margin-bottom: calc(var(--icon-size) / -2);
}

.c8 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-sorter-down {
  margin-top: calc(var(--icon-size) / -2);
}

.c8 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-sorter .anticon svg {
  fill: var(--acx-primary-black);
}

.c8 .ant-pro-table .ant-table-thead > tr > th[style*="text-align: center"] .ant-table-column-sorters {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 .ant-pro-table .ant-table-thead > tr > th[style*="text-align: right"] .ant-table-column-sorters {
  -webkit-box-pack: right;
  -webkit-justify-content: right;
  -ms-flex-pack: right;
  justify-content: right;
}

.c8 .ant-pro-table .ant-table-tbody > tr > td {
  border-bottom: 1px solid var(--acx-neutrals-30);
  padding: 14px var(--acx-table-cell-horizontal-space);
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
}

.c8 .ant-pro-table .ant-table-tbody > tr > td.ant-table-cell-row-hover {
  background-color: var(--acx-primary-white) !important;
}

.c8 .ant-pro-table .ant-table-tbody > tr > td a {
  font-size: unset;
}

.c8 .ant-pro-table .ant-table-tbody > tr > td .ant-badge.ant-badge-status:not(.acx-chart-tooltip) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 .ant-pro-table .ant-table-tbody > tr > td .ant-badge.ant-badge-status:not(.acx-chart-tooltip) .ant-badge-status-dot {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c8 .ant-pro-table .ant-table-thead > tr:first-child > th,
.c8 .ant-pro-table .ant-table-thead > tr:last-child > th {
  font-size: var(--acx-body-5-font-size);
  line-height: var(--acx-body-5-line-height);
  font-weight: var(--acx-body-font-weight-bold);
  padding-top: 6px;
  padding-bottom: 6px;
}

.c8 .ant-pro-table .ant-table-tbody > tr > td {
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  font-weight: var(--acx-body-font-weight);
  padding-top: 6px;
  padding-bottom: 6px;
  border-bottom: 1px solid var(--acx-neutrals-30) !important;
}

.c8 .ant-pro-table .ant-table .ant-table-thead > tr:last-child > th,
.c8 .ant-pro-table .ant-table .ant-table-tbody > tr:last-child > td {
  border-bottom: 0px !important;
}

.c8 .ant-pro-table .ant-table .ant-table-tbody > tr:first-child {
  display: none;
}

.c10 .ant-progress-steps-outer .ant-progress-steps-item {
  width: 6px !important;
  border-radius: 2px;
}

.c10 .ant-progress-inner,
.c10 .ant-progress-bg {
  border-radius: 0px 3px 3px 0px !important;
}

.c11 {
  display: block;
  font-family: var(--acx-neutral-brand-font);
  font-size: var(--acx-body-6-font-size);
  line-height: var(--acx-body-6-line-height);
  font-weight: var(--acx-body-font-weight);
  color: var(--acx-neutrals-60);
}

.c9 {
  white-space: nowrap;
  width: 125px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c7 .ant-table-tbody > tr > td {
  padding-top: 12px !important;
  padding-bottom: 12px !important;
}

.c12 {
  margin-bottom: -12px;
}

@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
    class="c0"
  >
    <div
      class="c1"
      type="default"
    >
      <div
        class="ant-card"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 4px;"
                >
                  <div
                    class="c2"
                  >
                    Client Experience
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <svg
                    class="c3"
                    data-testid="HistoricalOutlined"
                  />
                </div>
              </div>
              <div
                class="c4"
              >
                Top Venues with poor experience
              </div>
            </div>
            <div
              class="ant-card-extra"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only c5"
                    title="Expand"
                    type="button"
                  >
                    <svg
                      class="c6"
                      data-testid="ArrowChevronRight"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <div
            style="overflow: visible; height: 0px; width: 0px;"
          >
            <div
              style="display: block; height: 800px; width: 1280px;"
            >
              <div
                class="c7"
              >
                <div
                  class="c8"
                  style="--sticky-offset: 0px; --sticky-has-actions: 0; --sticky-has-row-actions-offset: 0;"
                >
                  <div
                    class="ant-pro-table"
                  >
                    <div
                      class="ant-pro-card"
                    >
                      <div
                        class="ant-pro-card-body"
                        style="padding-top: 0px;"
                      >
                        <div
                          class="ant-pro-table-list-toolbar"
                        />
                        <div
                          class="ant-table-wrapper"
                        >
                          <div
                            class="ant-spin-nested-loading"
                          >
                            <div
                              class="ant-spin-container"
                            >
                              <div
                                class="ant-table ant-table-middle ant-table-scroll-horizontal"
                              >
                                <div
                                  class="ant-table-container"
                                >
                                  <div
                                    class="ant-table-content"
                                    style="overflow-x: auto; overflow-y: hidden;"
                                  >
                                    <table
                                      style="width: 100%; min-width: 100%; table-layout: auto;"
                                    >
                                      <colgroup />
                                      <thead
                                        class="ant-table-thead"
                                      >
                                        <tr>
                                          <th
                                            class="ant-table-cell"
                                          />
                                          <th
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            Score
                                          </th>
                                          <th
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            Connection Success
                                          </th>
                                          <th
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            Time To Connect
                                          </th>
                                          <th
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            Client Throughput
                                          </th>
                                          <th
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            AP Capacity
                                          </th>
                                          <th
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            Online APs
                                          </th>
                                        </tr>
                                      </thead>
                                      <tbody
                                        class="ant-table-tbody"
                                      >
                                        <tr
                                          aria-hidden="true"
                                          class="ant-table-measure-row"
                                          style="height: 0px; font-size: 0px;"
                                        >
                                          <td
                                            style="padding: 0px; border: 0px; height: 0px;"
                                          >
                                            <div
                                              style="height: 0px; overflow: hidden;"
                                            >
                                               
                                            </div>
                                          </td>
                                          <td
                                            style="padding: 0px; border: 0px; height: 0px;"
                                          >
                                            <div
                                              style="height: 0px; overflow: hidden;"
                                            >
                                               
                                            </div>
                                          </td>
                                          <td
                                            style="padding: 0px; border: 0px; height: 0px;"
                                          >
                                            <div
                                              style="height: 0px; overflow: hidden;"
                                            >
                                               
                                            </div>
                                          </td>
                                          <td
                                            style="padding: 0px; border: 0px; height: 0px;"
                                          >
                                            <div
                                              style="height: 0px; overflow: hidden;"
                                            >
                                               
                                            </div>
                                          </td>
                                          <td
                                            style="padding: 0px; border: 0px; height: 0px;"
                                          >
                                            <div
                                              style="height: 0px; overflow: hidden;"
                                            >
                                               
                                            </div>
                                          </td>
                                          <td
                                            style="padding: 0px; border: 0px; height: 0px;"
                                          >
                                            <div
                                              style="height: 0px; overflow: hidden;"
                                            >
                                               
                                            </div>
                                          </td>
                                          <td
                                            style="padding: 0px; border: 0px; height: 0px;"
                                          >
                                            <div
                                              style="height: 0px; overflow: hidden;"
                                            >
                                               
                                            </div>
                                          </td>
                                        </tr>
                                        <tr
                                          class="ant-table-row ant-table-row-level-0"
                                          data-row-key="f0997ab93fa24670a961c98446d47ae6"
                                        >
                                          <td
                                            class="ant-table-cell"
                                          >
                                            <div
                                              class="c9"
                                            >
                                              <a
                                                href="/ecc2d7cf9d2342fdb31ae0e24958fcac/t/venues/f0997ab93fa24670a961c98446d47ae6/venue-details/analytics/health/overview"
                                                title="f0997ab93fa24670a961c98446d47ae6"
                                              >
                                                f0997ab93fa24670a961c98446d47ae6
                                              </a>
                                            </div>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <div
                                              class="ant-progress-wrapper"
                                            >
                                              <div
                                                class="ant-progress ant-progress-steps ant-progress-status-normal ant-progress-default c10"
                                              >
                                                <div
                                                  class="ant-progress-steps-outer"
                                                >
                                                  <div
                                                    class="ant-progress-steps-item ant-progress-steps-item-active"
                                                    style="background-color: rgb(249, 195, 75); width: 14px; height: 10px;"
                                                  />
                                                  <div
                                                    class="ant-progress-steps-item ant-progress-steps-item-active"
                                                    style="background-color: rgb(249, 195, 75); width: 14px; height: 10px;"
                                                  />
                                                  <div
                                                    class="ant-progress-steps-item ant-progress-steps-item-active"
                                                    style="background-color: rgb(249, 195, 75); width: 14px; height: 10px;"
                                                  />
                                                  <div
                                                    class="ant-progress-steps-item"
                                                    style="background-color: rgb(212, 212, 212); width: 14px; height: 10px;"
                                                  />
                                                  <div
                                                    class="ant-progress-steps-item"
                                                    style="background-color: rgb(212, 212, 212); width: 14px; height: 10px;"
                                                  />
                                                </div>
                                              </div>
                                            </div>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span
                                              data-tooltip="11.3K of 26.5K attempts"
                                            >
                                              43%
                                            </span>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span>
                                              <span
                                                data-tooltip="20 of 1.44K connections under 2 seconds"
                                              >
                                                1%
                                              </span>
                                              <span
                                                class="c11 c12"
                                              >
                                                &lt; 2 s
                                              </span>
                                            </span>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span>
                                              <span
                                                data-tooltip="675 of 675 sessions above 10 Mbps"
                                              >
                                                100%
                                              </span>
                                              <span
                                                class="c11 c12"
                                              >
                                                &gt; 10 Mbps
                                              </span>
                                            </span>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span>
                                              <span
                                                data-tooltip="10 of 30 APs above 100 Mbps"
                                              >
                                                33%
                                              </span>
                                              <span
                                                class="c11 c12"
                                              >
                                                &gt; 100 Mbps
                                              </span>
                                            </span>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span
                                              data-tooltip="1 of 1 APs online"
                                            >
                                              100%
                                            </span>
                                          </td>
                                        </tr>
                                        <tr
                                          class="ant-table-row ant-table-row-level-0"
                                          data-row-key="Vaibhav-venue"
                                        >
                                          <td
                                            class="ant-table-cell"
                                          >
                                            <div
                                              class="c9"
                                            >
                                              <a
                                                href="/ecc2d7cf9d2342fdb31ae0e24958fcac/t/venues/96bf314d575341cf95942caa2b072106/venue-details/analytics/health/overview"
                                                title="Vaibhav-venue"
                                              >
                                                Vaibhav-venue
                                              </a>
                                            </div>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <div
                                              class="ant-progress-wrapper"
                                            >
                                              <div
                                                class="ant-progress ant-progress-steps ant-progress-status-normal ant-progress-default c10"
                                              >
                                                <div
                                                  class="ant-progress-steps-outer"
                                                >
                                                  <div
                                                    class="ant-progress-steps-item ant-progress-steps-item-active"
                                                    style="background-color: rgb(35, 171, 54); width: 14px; height: 10px;"
                                                  />
                                                  <div
                                                    class="ant-progress-steps-item ant-progress-steps-item-active"
                                                    style="background-color: rgb(35, 171, 54); width: 14px; height: 10px;"
                                                  />
                                                  <div
                                                    class="ant-progress-steps-item ant-progress-steps-item-active"
                                                    style="background-color: rgb(35, 171, 54); width: 14px; height: 10px;"
                                                  />
                                                  <div
                                                    class="ant-progress-steps-item ant-progress-steps-item-active"
                                                    style="background-color: rgb(35, 171, 54); width: 14px; height: 10px;"
                                                  />
                                                  <div
                                                    class="ant-progress-steps-item"
                                                    style="background-color: rgb(212, 212, 212); width: 14px; height: 10px;"
                                                  />
                                                </div>
                                              </div>
                                            </div>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span
                                              data-tooltip="68 of 72 attempts"
                                            >
                                              94%
                                            </span>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span>
                                              <span
                                                data-tooltip="27 of 27 connections under 2 seconds"
                                              >
                                                100%
                                              </span>
                                              <span
                                                class="c11 c12"
                                              >
                                                &lt; 2 s
                                              </span>
                                            </span>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span>
                                              <span
                                                data-tooltip="2 of 11 sessions above 10 Mbps"
                                              >
                                                18%
                                              </span>
                                              <span
                                                class="c11 c12"
                                              >
                                                &gt; 10 Mbps
                                              </span>
                                            </span>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span>
                                              <span
                                                data-tooltip="10 of 10 APs above 5 Mbps"
                                              >
                                                100%
                                              </span>
                                              <span
                                                class="c11 c12"
                                              >
                                                &gt; 5 Mbps
                                              </span>
                                            </span>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span
                                              data-tooltip="2 of 4 APs online"
                                            >
                                              50%
                                            </span>
                                          </td>
                                        </tr>
                                        <tr
                                          class="ant-table-row ant-table-row-level-0"
                                          data-row-key="My-Venue"
                                        >
                                          <td
                                            class="ant-table-cell"
                                          >
                                            <div
                                              class="c9"
                                            >
                                              <a
                                                href="/ecc2d7cf9d2342fdb31ae0e24958fcac/t/venues/e5d28cb30cb44be9bea1c8e7135da928/venue-details/analytics/health/overview"
                                                title="My-Venue"
                                              >
                                                My-Venue
                                              </a>
                                            </div>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <div
                                              class="ant-progress-wrapper"
                                            >
                                              <div
                                                class="ant-progress ant-progress-steps ant-progress-status-success ant-progress-default c10"
                                              >
                                                <div
                                                  class="ant-progress-steps-outer"
                                                >
                                                  <div
                                                    class="ant-progress-steps-item ant-progress-steps-item-active"
                                                    style="background-color: rgb(35, 171, 54); width: 14px; height: 10px;"
                                                  />
                                                  <div
                                                    class="ant-progress-steps-item ant-progress-steps-item-active"
                                                    style="background-color: rgb(35, 171, 54); width: 14px; height: 10px;"
                                                  />
                                                  <div
                                                    class="ant-progress-steps-item ant-progress-steps-item-active"
                                                    style="background-color: rgb(35, 171, 54); width: 14px; height: 10px;"
                                                  />
                                                  <div
                                                    class="ant-progress-steps-item ant-progress-steps-item-active"
                                                    style="background-color: rgb(35, 171, 54); width: 14px; height: 10px;"
                                                  />
                                                  <div
                                                    class="ant-progress-steps-item ant-progress-steps-item-active"
                                                    style="background-color: rgb(35, 171, 54); width: 14px; height: 10px;"
                                                  />
                                                </div>
                                              </div>
                                            </div>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span
                                              data-tooltip="251 of 354 attempts"
                                            >
                                              71%
                                            </span>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span>
                                              <span
                                                data-tooltip="27 of 29 connections under 2 seconds"
                                              >
                                                93%
                                              </span>
                                              <span
                                                class="c11 c12"
                                              >
                                                &lt; 2 s
                                              </span>
                                            </span>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span>
                                              <span
                                                data-tooltip="15 of 15 sessions above 10 Mbps"
                                              >
                                                100%
                                              </span>
                                              <span
                                                class="c11 c12"
                                              >
                                                &gt; 10 Mbps
                                              </span>
                                            </span>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span>
                                              -
                                            </span>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span
                                              data-tooltip="12 of 12 APs online"
                                            >
                                              100%
                                            </span>
                                          </td>
                                        </tr>
                                        <tr
                                          class="ant-table-row ant-table-row-level-0"
                                          data-row-key="test-Venue"
                                        >
                                          <td
                                            class="ant-table-cell"
                                          >
                                            <div
                                              class="c9"
                                            >
                                              <a
                                                href="/ecc2d7cf9d2342fdb31ae0e24958fcac/t/venues/1c0683276dce48679013dea12bf6abe0/venue-details/analytics/health/overview"
                                                title="test-Venue"
                                              >
                                                test-Venue
                                              </a>
                                            </div>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <div
                                              class="ant-progress-wrapper"
                                            >
                                              <div
                                                class="ant-progress ant-progress-steps ant-progress-status-success ant-progress-default c10"
                                              >
                                                <div
                                                  class="ant-progress-steps-outer"
                                                >
                                                  <div
                                                    class="ant-progress-steps-item ant-progress-steps-item-active"
                                                    style="background-color: rgb(35, 171, 54); width: 14px; height: 10px;"
                                                  />
                                                  <div
                                                    class="ant-progress-steps-item ant-progress-steps-item-active"
                                                    style="background-color: rgb(35, 171, 54); width: 14px; height: 10px;"
                                                  />
                                                  <div
                                                    class="ant-progress-steps-item ant-progress-steps-item-active"
                                                    style="background-color: rgb(35, 171, 54); width: 14px; height: 10px;"
                                                  />
                                                  <div
                                                    class="ant-progress-steps-item ant-progress-steps-item-active"
                                                    style="background-color: rgb(35, 171, 54); width: 14px; height: 10px;"
                                                  />
                                                  <div
                                                    class="ant-progress-steps-item ant-progress-steps-item-active"
                                                    style="background-color: rgb(35, 171, 54); width: 14px; height: 10px;"
                                                  />
                                                </div>
                                              </div>
                                            </div>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span
                                              data-tooltip="4 of 5 attempts"
                                            >
                                              80%
                                            </span>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span>
                                              <span
                                                data-tooltip="2 of 2 connections under 2 seconds"
                                              >
                                                100%
                                              </span>
                                              <span
                                                class="c11 c12"
                                              >
                                                &lt; 2 s
                                              </span>
                                            </span>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span>
                                              --
                                            </span>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span>
                                              -
                                            </span>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span
                                              data-tooltip="1 of 1 APs online"
                                            >
                                              100%
                                            </span>
                                          </td>
                                        </tr>
                                        <tr
                                          class="ant-table-row ant-table-row-level-0"
                                          data-row-key="BDCSZ"
                                        >
                                          <td
                                            class="ant-table-cell"
                                          >
                                            <div
                                              class="c9"
                                            >
                                              <a
                                                href="/ecc2d7cf9d2342fdb31ae0e24958fcac/t/venues/555548721e264115bda45a75043f65d7/venue-details/analytics/health/overview"
                                                title="BDCSZ"
                                              >
                                                BDCSZ
                                              </a>
                                            </div>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <div
                                              class="ant-progress-wrapper"
                                            >
                                              <div
                                                class="ant-progress ant-progress-steps ant-progress-status-success ant-progress-default c10"
                                              >
                                                <div
                                                  class="ant-progress-steps-outer"
                                                >
                                                  <div
                                                    class="ant-progress-steps-item ant-progress-steps-item-active"
                                                    style="background-color: rgb(35, 171, 54); width: 14px; height: 10px;"
                                                  />
                                                  <div
                                                    class="ant-progress-steps-item ant-progress-steps-item-active"
                                                    style="background-color: rgb(35, 171, 54); width: 14px; height: 10px;"
                                                  />
                                                  <div
                                                    class="ant-progress-steps-item ant-progress-steps-item-active"
                                                    style="background-color: rgb(35, 171, 54); width: 14px; height: 10px;"
                                                  />
                                                  <div
                                                    class="ant-progress-steps-item ant-progress-steps-item-active"
                                                    style="background-color: rgb(35, 171, 54); width: 14px; height: 10px;"
                                                  />
                                                  <div
                                                    class="ant-progress-steps-item ant-progress-steps-item-active"
                                                    style="background-color: rgb(35, 171, 54); width: 14px; height: 10px;"
                                                  />
                                                </div>
                                              </div>
                                            </div>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span
                                              data-tooltip="22 of 27 attempts"
                                            >
                                              81%
                                            </span>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span>
                                              --
                                            </span>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span>
                                              <span
                                                data-tooltip="4 of 4 sessions above 10 Mbps"
                                              >
                                                100%
                                              </span>
                                              <span
                                                class="c11 c12"
                                              >
                                                &gt; 10 Mbps
                                              </span>
                                            </span>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span>
                                              <span
                                                data-tooltip="3 of 4 APs above 100 Mbps"
                                              >
                                                75%
                                              </span>
                                              <span
                                                class="c11 c12"
                                              >
                                                &gt; 100 Mbps
                                              </span>
                                            </span>
                                          </td>
                                          <td
                                            class="ant-table-cell"
                                            style="text-align: center;"
                                          >
                                            <span
                                              data-tooltip="5 of 5 APs online"
                                            >
                                              100%
                                            </span>
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1281px; height: 801px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
